feat: Update dependencies and configure for GitHub Pages
This commit updates dependencies to their latest compatible versions, including React, Three.js, and related libraries. It also configures the project for deployment on GitHub Pages by setting the base URL and adding deployment scripts.

--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "aerofolio-3d---ai-powered",
+  "name": "aerofolio-3d",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "@google/genai": "^1.30.0",
-    "three": "^0.181.2",
-    "react-dom": "^19.2.0",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.0"
+    "@google/genai": "^0.1.1",
+    "@react-three/drei": "^9.105.0",
+    "@react-three/fiber": "^8.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.164.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.164.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "gh-pages": "^6.1.1",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   }
 }
