--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^0.1.1",
@@ -24,7 +21,6 @@
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.164.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "gh-pages": "^6.1.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   }
