--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.1.1",
+    "@google/genai": "^0.2.1",
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.0",
     "react": "^18.3.1",
@@ -17,6 +17,7 @@
     "three": "^0.164.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.164.0",
