--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.2.1",
+    "@google/genai": "*",
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.0",
     "react": "^18.3.1",
