--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-three/fiber": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.164.0"
+    "three": "^0.164.0",
+    "three-mesh-bvh": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
