--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@google/genai": "*",
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.0",
+    "@react-three/postprocessing": "^2.16.0",
+    "@react-three/rapier": "^1.3.0",
+    "postprocessing": "^6.35.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.164.0",
